--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.6.1",
+    "@modelcontextprotocol/sdk": "^1.7.0",
+    "@types/cors": "^2.8.17",
     "@types/yargs": "^17.0.33",
-    "axios": "^1.7.9",
+    "axios": "^1.8.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "eventsource": "^3.0.5",
     "express": "^4.21.2",
     "remeda": "^2.20.1",
     "yargs": "^17.7.2",
